--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "landingpage",
   "version": "0.1.0",
+  "homepage": "https://github.com/FREHIWOT-MESFIN/PRODIGY_WD_01.git",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
