--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "landingpage",
   "version": "0.1.0",
-  "homepage": "https://github.com/FREHIWOT-MESFIN/PRODIGY_WD_01.git",
   "private": true,
+  "homepage": "https://frehiwot-mesfin.github.io/PRODIGY_WD_01/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,7 +20,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
